Add 'openai' to project dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "gpiozero>=2.0.1",
     "kittentts",
+    "openai",
     "lgpio>=0.2.2.0",
     "numba>=0.57.0",
     "ollama>=0.6.1",
