--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "local-ai-assistant"
 version = "0.1.0"
 description = "Raspberry Pi Local voice assistant"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<3.12"
 dependencies = [
     "gpiozero>=2.0.1",
     "kittentts",
